[tool.poetry]
name = "sunan-al-nasai"
version = "1.0.1"
description = "Complete Sunan al-Nasa'i — 5,768 hadiths with full Arabic text and English translations. Offline-first, zero dependencies. CLI + Python library."
authors = ["muhammadsaadamin"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/SENODROOM/sunan-al-nasai"
repository = "https://github.com/SENODROOM/sunan-al-nasai"
keywords = ["islam", "hadith", "nasai", "nasa'i", "sunan", "sunnah", "arabic", "english", "quran"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Religion",
]
packages = [{include = "sunan_al_nasai", from = "python"}]
include = [
    {path = "python/sunan_al_nasai/data/nasai.json.gz", format = ["sdist", "wheel"]},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
nasai = "sunan_al_nasai.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
